--- a/WingMate_iOS/View Controllers/Search/Cells/SearchUserCollectionViewCell.xib
+++ b/WingMate_iOS/View Controllers/Search/Cells/SearchUserCollectionViewCell.xib
@@ -29,6 +29,9 @@
                                 <rect key="frame" x="0.0" y="0.0" width="182" height="128"/>
                                 <color key="backgroundColor" red="0.066666666666666666" green="0.16078431372549018" blue="0.30980392156862746" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" translatesAutoresizingMaskIntoConstraints="NO" id="LVm-Y6-yOQ">
+                                <rect key="frame" x="150.5" y="10" width="21.5" height="21.5"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name, age" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSb-Hx-7Ia">
                                 <rect key="frame" x="8" y="101" width="166" height="19"/>
                                 <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
@@ -80,8 +83,10 @@
                             <constraint firstItem="UgY-K4-5n8" firstAttribute="top" secondItem="Ghe-WW-AUa" secondAttribute="bottom" id="6GU-aF-vcT"/>
                             <constraint firstItem="b3i-Fj-G05" firstAttribute="leading" secondItem="1XX-wg-Llo" secondAttribute="leading" id="BFy-11-pnQ"/>
                             <constraint firstItem="Ghe-WW-AUa" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" id="Hn1-A0-drR"/>
+                            <constraint firstAttribute="trailing" secondItem="LVm-Y6-yOQ" secondAttribute="trailing" constant="10" id="MLq-NU-aOU"/>
                             <constraint firstItem="UgY-K4-5n8" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" id="MXN-Ze-VNT"/>
                             <constraint firstItem="1XX-wg-Llo" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" id="Y9R-Jw-b4N"/>
+                            <constraint firstItem="LVm-Y6-yOQ" firstAttribute="top" secondItem="gih-Xt-SQT" secondAttribute="top" constant="10" id="Zhi-nr-IaA"/>
                             <constraint firstItem="b3i-Fj-G05" firstAttribute="trailing" secondItem="1XX-wg-Llo" secondAttribute="trailing" id="a8u-i5-syb"/>
                             <constraint firstAttribute="trailing" secondItem="Ghe-WW-AUa" secondAttribute="trailing" id="gRr-iD-Flm"/>
                             <constraint firstAttribute="trailing" secondItem="1XX-wg-Llo" secondAttribute="trailing" id="hOq-cM-zVS"/>
@@ -110,6 +115,7 @@
             </constraints>
             <size key="customSize" width="198" height="173"/>
             <connections>
+                <outlet property="imageViewHeart" destination="LVm-Y6-yOQ" id="aHl-s1-p52"/>
                 <outlet property="imageViewPhoto" destination="1XX-wg-Llo" id="Wj1-cf-QTh"/>
                 <outlet property="labelLocation" destination="yq7-yG-QOK" id="O64-z6-oq4"/>
                 <outlet property="labelMatchPercentage" destination="I0O-kO-pMJ" id="j8A-Y5-RK0"/>
@@ -119,6 +125,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="heart" width="21.333333969116211" height="21.333333969116211"/>
         <image name="location_icon" width="12" height="15.666666984558105"/>
         <image name="man" width="208.66667175292969" height="194.33332824707031"/>
         <namedColor name="LabelDarkBlueColor">
